# planning-hackathon

./: .gitignore  README.md  app.py  data_processor.py  example.env  llm_handler.py  pyproject.toml  requirements.txt  settings.py
assets/: dashExtensions_default.js
data/: LA_water_output.csv
src/data/: LA_energy_output.csv
src/home_capacity_viewer/: app.py  data_processor.py  database.py  llm_handler.py  settings.py  sql_agent.py
src/tests/: test_database.py
utils/: data_processor.py  llm_handler.py  settings.py
