[project]
name = "home-capacity-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash==2.14.2",
    "dash-bootstrap-components==1.5.0",
    "dash-extensions==1.0.4",
    "dash-leaflet==1.0.4",
    "langchain>=0.3.26",
    "langchain-openai>=0.2.13",
    "openai==1.56.1",
    "pandas==2.2.0",
    "pyarrow>=20.0.0",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/home_capacity_viewer"]
